--- a/assets/css/SwEditor.css
+++ b/assets/css/SwEditor.css
@@ -247,7 +247,7 @@
 #richTextModalImageBody h3 {
 	font-weight:600;
 	font-size:14px;
-	margin-bottom:4px;
+	margin:0px 0px 4px 0px;
 }
 
 #richTextModalPreviewImage {
