--- a/assets/css/SwEditor.css
+++ b/assets/css/SwEditor.css
@@ -103,6 +103,7 @@
 	border-right: solid 1px #CCCCCC;
 	cursor:pointer;
 	display:inline-block;
+	float:left;
 }
 
 #justifyCenter {
@@ -110,6 +111,7 @@
 	border-right: solid 1px #CCCCCC;
 	cursor:pointer;
 	display:inline-block;
+	float:left;
 }
 
 #justifyRight {
