--- a/assets/css/SwEditor.css
+++ b/assets/css/SwEditor.css
@@ -1,283 +1,449 @@
 .richEditorMain {
-	position:relative;
-	font-family:BlinkMacSystemFont,-apple-system,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
-	padding: 0px;
-	border: solid 2px #EEEEEE;
-	border-radius: 6px;
-	margin-top: 6px;
+    position: relative;
+    font-family: BlinkMacSystemFont, -apple-system, segoe ui, Roboto, Oxygen, Ubuntu, Cantarell, fira sans, droid sans, helvetica neue, Helvetica, Arial, sans-serif;
+    padding: 0;
+    border: solid 2px #eee;
+    border-radius: 6px;
+    margin-top: 6px
 }
 
 .richEditorMenu {
-	background-color: #EEEEEE;
-	padding: 1px 5px 5px 5px;
+    background-color: #eee;
+    padding: 5px;
+    display: flex;
+    align-items: center;
+    gap: 6px;
+}
+
+.SwScEditorFooter {
+    background-color: #bbb;
+    padding: 2px;
+    padding-left: 4px;
+    text-align: right
+}
+
+.SwScEditorFooter a {
+    color: #fff;
+    text-decoration: none
 }
 
 #richTextField {
-	width: 100%;
-	height: 300px;
-	border:0px;
-	word-break:break-word;
+    width: 100%;
+    height: 300px;
+    border: 0;
+    word-break: break-word
 }
 
 .richEditorMenu-1 {
-	display: inline-block;
-	margin-top:4px;
+    display: flex;
+    margin-top: 4px
 }
 
-.richEditorMenu-2 {
-	background-color:#FFFFFF;
-	border-radius:6px;
-	border: solid 1px #CCCCCC;
-	display:inline-flex;
-	margin-top:4px;
-	margin-left:4px;
-}
-
-.richEditorMenu-3, .richEditorMenu-4, .richEditorMenu-5 {
-	background-color:#FFFFFF;
-	margin-left:4px;
-	margin-top:4px;
-	border-radius:6px;
-	border: solid 1px #CCCCCC;
-	display:inline-block;
+.richEditorMenu-2,
+.richEditorMenu-3,
+.richEditorMenu-4,
+.richEditorMenu-5 {
+    background-color: #fff;
+    border-radius: 6px;
+    border: solid 1px #ccc;
 }
 
 #fontName {
-	border: solid 1px #CCCCCC;
-	background-color: #FFFFFF;
-	padding:6px;
-	border-top-left-radius:6px;
-	border-bottom-left-radius:6px;
+    border: solid 1px #ccc;
+    background-color: #fff;
+    padding: 6px;
+    border-top-left-radius: 6px;
+    border-bottom-left-radius: 6px
 }
 
 #fontSize {
-	border: solid 1px #cccccc;
-	background-color: #FFFFFF;
-	padding:6px;
-	margin:0;
-	border-top-right-radius:6px;
-	border-bottom-right-radius:6px;
+    border: solid 1px #ccc;
+    background-color: #fff;
+    padding: 6px;
+    margin: 0;
+    border-top-right-radius: 6px;
+    border-bottom-right-radius: 6px
 }
 
 #foreColor {
-	padding:6px 12px;
-	cursor:pointer;
+    display: block;
+    padding: 3px 6px;
+    cursor: pointer
+}
+
+#foreColor input {
+    border: none;
+    padding: 0px;
+    background: unset;
 }
 
 #bold {
-	padding:6px 12px 6px 12px;
-	border-top-left-radius:5px;
-	border-bottom-left-radius:5px;
-	border-right: solid 1px #CCCCCC;
-	cursor:pointer;
-	display:inline-block;
+    padding: 6px 12px;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border-right: solid 1px #ccc;
+    cursor: pointer;
+    display: inline-block
 }
 
 #italic {
-	/*TOP RIGHT BOTTOM LEFT*/
-	padding:6px 12px 6px 12px;
-	border-right: solid 1px #CCCCCC;
-	cursor:pointer;
-	display:inline-block;
+    padding: 6px 12px;
+    border-right: solid 1px #ccc;
+    cursor: pointer;
+    display: inline-block
 }
 
 #underline {
-	padding:6px 12px 6px 12px;
-	border-right: solid 1px #CCCCCC;
-	cursor:pointer;
-	display:inline-block;
+    padding: 6px 12px;
+    border-right: solid 1px #ccc;
+    cursor: pointer;
+    display: inline-block
 }
 
 #strikeThrough {
-	padding:6px 12px 6px 12px;
-	border-top-right-radius:5px;
-	border-bottom-right-radius:5px;
-	cursor:pointer;
-	display:inline-block;
+    padding: 6px 12px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    cursor: pointer;
+    display: inline-block
 }
 
 #justifyLeft {
-	padding:6px 12px 6px 12px;
-	border-top-left-radius:5px;
-	border-bottom-left-radius:5px;
-	border-right: solid 1px #CCCCCC;
-	cursor:pointer;
-	display:inline-block;
-	float:left;
+    padding: 6px 12px;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border-right: solid 1px #ccc;
+    cursor: pointer;
+    display: inline-block;
+    float: left
 }
 
 #justifyCenter {
-	padding:6px 12px 6px 12px;
-	border-right: solid 1px #CCCCCC;
-	cursor:pointer;
-	display:inline-block;
-	float:left;
+    padding: 6px 12px;
+    border-right: solid 1px #ccc;
+    cursor: pointer;
+    display: inline-block;
+    float: left
 }
 
 #justifyRight {
-	padding:6px 12px 6px 12px;
-	border-top-right-radius:5px;
-	border-bottom-right-radius:5px;
-	cursor:pointer;
-	display:inline-block;
+    padding: 6px 12px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    cursor: pointer;
+    display: inline-block
 }
 
 #InsertLink {
-	padding:6px 12px 6px 12px;
-	border-top-left-radius:5px;
-	border-bottom-left-radius:5px;
-	border-right: solid 1px #CCCCCC;
-	cursor:pointer;
-	display:inline-block;
+    padding: 6px 12px;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border-right: solid 1px #ccc;
+    cursor: pointer;
+    display: inline-block
 }
 
 #unlink {
-	padding:6px 12px 6px 12px;
-	border-right: solid 1px #CCCCCC;
-	cursor:pointer;
-	display:inline-block;
+    padding: 6px 12px;
+    border-right: solid 1px #ccc;
+    cursor: pointer;
+    display: inline-block
+}
+
+#InsertCode {
+    padding: 6px 12px;
+    border-right: solid 1px #ccc;
+    cursor: pointer;
+    display: inline-block
 }
 
 #InsertImage {
-	padding:6px 12px 6px 12px;
-	border-top-right-radius:5px;
-	border-bottom-right-radius:5px;
-	cursor:pointer;
-	display:inline-block;
+    padding: 6px 12px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    cursor: pointer;
+    display: inline-block
 }
 
 #richTextModal {
-	position:absolute;
-	display:none;
-	border-radius:6px;
-	top:0px;
-	left:0px;
-	background:rgba(0, 0, 0, 0.4);
-	width:100%;
-	height:100%;
-	z-index:99;
+    position: absolute;
+    display: none;
+    border-radius: 6px;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, .4);
+    width: 100%;
+    height: 100%;
+    z-index: 99
 }
 
-#richTextModal input[type=text]{
-	border:solid 2px #0083f0;
-	padding:10px 6px;
-	border-radius:3px;
-	width:100%;
+#richTextModal input[type=text] {
+    border: solid 2px #0083f0;
+    padding: 10px 6px;
+    border-radius: 3px;
+    width: 100%
 }
 
 #richTextModal .richTextModalButton {
-	background:#e9e9e9;
-	border:none;
-	padding:6px 8px;
-	border-radius:3px;
-	cursor:pointer;
-	transition:.4s;
+    background: #e9e9e9;
+    border: none;
+    padding: 6px 8px;
+    border-radius: 3px;
+    cursor: pointer;
+    transition: .4s
 }
 
 #richTextModal .richTextModalButton:hover {
-	background:#d9d9d9;
+    background: #d9d9d9
 }
 
 #richTextModal .richTextModalButton.richTextModalButtonBlue {
-	background:#0083f0;
-	color:#fff;
+    background: #0083f0;
+    color: #fff
 }
 
 #richTextModal .richTextModalButton.richTextModalButtonBlue:hover {
-	background:#006dde;
+    background: #006dde
 }
 
 #richTextModalMain {
-	position:absolute;
-	width:350px;
-	background:#fff;
-	border-radius:4px;
-	top:25px;
-	left:50%;
-	transform:translate(-50%);
+    position: absolute;
+    width: 350px;
+    background: #fff;
+    border-radius: 4px;
+    top: 25px;
+    left: 50%;
+    transform: translate(-50%)
 }
 
 #richTextModalHeader {
-	background:#0083f0;
-	color:#ffffff;
-	padding:8px;
-	border-radius:4px 4px 0px 0px;
+    background: #0083f0;
+    color: #fff;
+    padding: 8px;
+    border-radius: 4px 4px 0 0
 }
 
 #richTextModalBody {
-	padding:16px 8px;
+    padding: 16px 8px
 }
 
 #richTextModalFooter {
-	border:solid 1px #eee;
-	padding:8px;
+    border: solid 1px #eee;
+    padding: 8px
 }
 
 #richTextModalFooter button {
-	margin-left:4px;
+    margin-left: 4px
 }
 
 #richTextModalFooter.richTextModalAlignRight {
-	text-align:right;
+    text-align: right
 }
 
 #richTextModal #richTextModalError {
-	margin:0px 5px 10px 10px;
-	display:none;
-	font-size:14px;
-	color:#d2504d;
+    margin: 0 5px 10px 10px;
+    display: none;
+    font-size: 14px;
+    color: #d2504d
 }
 
 #richTextModalImageBody {
-	width:calc(100% - 68px);
-	display:inline-block;
-	margin-left:8px;
+    width: calc(100% - 68px);
+    display: inline-block;
+    margin-left: 8px
 }
 
 #richTextModalImageBody h3 {
-	font-weight:600;
-	font-size:14px;
-	margin:0px 0px 4px 0px;
+    font-weight: 600;
+    font-size: 14px;
+    margin: 0 0 4px
 }
 
 #richTextModalPreviewImage {
-	background:#ecf0f3;
-	display:inline-block;
-	vertical-align:top;
-	text-align:center;
-	width:60px;
-	height:60px;
+    background: #ecf0f3;
+    display: inline-block;
+    vertical-align: top;
+    text-align: center;
+    width: 60px;
+    height: 60px
+}
+
+#richTextModalPreviewImage img {
+    max-width: 100%
 }
 
 #richTextModalUploadImage {
-	margin-bottom:12px;
+    margin-bottom: 12px
 }
 
 #richTextModalImportImage {
-	margin-bottom:12px;
+    margin-bottom: 12px
 }
 
 #richTextModalUploadImage input {
-	max-width:100%;
+    max-width: 100%
 }
 
 .richTextModalExpand {
-	width:600px !important;
+    width: 600px !important
 }
 
 .richTextModalExpand #richTextModalPreviewImage {
-	width: 140px;
-	height: 80px;
+    width: 140px;
+    height: 80px
 }
 
 .richTextModalExpand #richTextModalImageBody {
-	width:calc(100% - 148px);
+    width: calc(100% - 148px)
 }
 
-.toggle{--uiToggleSize:var(--toggleSize, 20px);--uiToggleIndent:var(--toggleIndent, .4em);--uiToggleBorderWidth:var(--toggleBorderWidth, 2px);--uiToggleColor:var(--toggleColor, #000);--uiToggleDisabledColor:var(--toggleDisabledColor, #868e96);--uiToggleBgColor:var(--toggleBgColor, #fff);--uiToggleArrowWidth:var(--toggleArrowWidth, 2px);--uiToggleArrowColor:var(--toggleArrowColor, #fff);display:inline-block;position:relative}.toggle__input{position:absolute;left:-99999px;outline:0}.toggle__label{display:inline-flex;cursor:pointer;min-height:var(--uiToggleSize);padding-left:calc(var(--uiToggleSize) + var(--uiToggleIndent));color:#7e7e7e}.toggle__label:after,.toggle__label:before{content:"";box-sizing:border-box;width:1em;height:1em;font-size:var(--uiToggleSize);position:absolute;left:0;top:0}.toggle__label:before{border:#e7e7e7 solid var(--uiToggleColor);background:#e7e7e7;z-index:2}.toggle__input:disabled~.toggle__label:before{border-color:var(--uiToggleDisabledColor)}.toggle__input:focus~.toggle__label:before{box-shadow:0 0 0 0 var(--uiToggleBgColor),0 0 0 0 var(--uiToggleColor)}.toggle__input:not(:disabled):checked:focus~.toggle__label:after{box-shadow:0 0 0 0 var(--uiToggleBgColor),0 0 0 0 var(--uiToggleColor)}.toggle__input:not(:disabled)~.toggle__label:after{background-color:var(--uiToggleColor);opacity:0}.toggle__input:not(:disabled):checked~.toggle__label:after{opacity:1}.toggle__text{font-size:9px;margin-top:auto;margin-bottom:auto;text-transform: uppercase; font-weight: 800; letter-spacing: 0.08em; line-height: 1.43rem}.toggle__text:before{content:"";box-sizing:border-box;width:0;height:0;font-size:var(--uiToggleSize);border-left-width:0;border-bottom-width:0;border-left-style:solid;border-bottom-style:solid;border-color:var(--uiToggleArrowColor);position:absolute;top:.5428em;left:.2em;z-index:3;transform-origin:left top;transform:rotate(-40deg) skew(10deg)}.toggle__input:not(:disabled):checked~.toggle__label .toggle__text:before{width:.5em;height:.25em;border-left-width:var(--uiToggleArrowWidth);border-bottom-width:var(--uiToggleArrowWidth);will-change:width,height;transition:width .1s ease-out .2s,height .2s ease-out}.toggle__label:after,.toggle__label:before{border-radius:4px}.toggle__input:not(:disabled)~.toggle__label:after,.toggle__input:not(:disabled)~.toggle__label:before{opacity:1;transform-origin:center center;will-change:transform;transition:transform .2s ease-out}.toggle__input:not(:disabled)~.toggle__label:before{transform:rotateY(0);transition-delay:.2s}.toggle__input:not(:disabled)~.toggle__label:after{transform:rotateY(90deg)}.toggle__input:not(:disabled):checked~.toggle__label:before{transform:rotateY(-90deg);transition-delay:0s}.toggle__input:not(:disabled):checked~.toggle__label:after{transform:rotateY(0);transition-delay:.2s}.toggle__text:before{opacity:0}.toggle__input:not(:disabled):checked~.toggle__label .toggle__text:before{opacity:1;transition:opacity .1s ease-out .3s,width .1s ease-out .5s,height .2s ease-out .3s}
+.toggle {
+    --uiToggleSize: var(--toggleSize, 20px);
+    --uiToggleIndent: var(--toggleIndent, .4em);
+    --uiToggleBorderWidth: var(--toggleBorderWidth, 2px);
+    --uiToggleColor: var(--toggleColor, #000);
+    --uiToggleDisabledColor: var(--toggleDisabledColor, #868e96);
+    --uiToggleBgColor: var(--toggleBgColor, #fff);
+    --uiToggleArrowWidth: var(--toggleArrowWidth, 2px);
+    --uiToggleArrowColor: var(--toggleArrowColor, #fff);
+    display: inline-block;
+    position: relative
+}
+
+.toggle__input {
+    position: absolute;
+    left: -99999px;
+    outline: 0
+}
+
+.toggle__label {
+    display: inline-flex;
+    cursor: pointer;
+    min-height: var(--uiToggleSize);
+    padding-left: calc(var(--uiToggleSize) + var(--uiToggleIndent));
+    color: #7e7e7e
+}
+
+.toggle__label:after,
+.toggle__label:before {
+    content: "";
+    box-sizing: border-box;
+    width: 1em;
+    height: 1em;
+    font-size: var(--uiToggleSize);
+    position: absolute;
+    left: 0;
+    top: 0
+}
+
+.toggle__label:before {
+    border: #e7e7e7 solid var(--uiToggleColor);
+    background: #e7e7e7;
+    z-index: 2
+}
+
+.toggle__input:disabled~.toggle__label:before {
+    border-color: var(--uiToggleDisabledColor)
+}
+
+.toggle__input:focus~.toggle__label:before {
+    box-shadow: 0 0 0 0 var(--uiToggleBgColor), 0 0 0 0 var(--uiToggleColor)
+}
+
+.toggle__input:not(:disabled):checked:focus~.toggle__label:after {
+    box-shadow: 0 0 0 0 var(--uiToggleBgColor), 0 0 0 0 var(--uiToggleColor)
+}
+
+.toggle__input:not(:disabled)~.toggle__label:after {
+    background-color: var(--uiToggleColor);
+    opacity: 0
+}
+
+.toggle__input:not(:disabled):checked~.toggle__label:after {
+    opacity: 1
+}
+
+.toggle__text {
+    font-size: 9px;
+    margin-top: auto;
+    margin-bottom: auto;
+    text-transform: uppercase;
+    font-weight: 800;
+    letter-spacing: .08em;
+    line-height: 1.43rem
+}
+
+.toggle__text:before {
+    content: "";
+    box-sizing: border-box;
+    width: 0;
+    height: 0;
+    font-size: var(--uiToggleSize);
+    border-left-width: 0;
+    border-bottom-width: 0;
+    border-left-style: solid;
+    border-bottom-style: solid;
+    border-color: var(--uiToggleArrowColor);
+    position: absolute;
+    top: .5428em;
+    left: .2em;
+    z-index: 3;
+    transform-origin: left top;
+    transform: rotate(-40deg) skew(10deg)
+}
+
+.toggle__input:not(:disabled):checked~.toggle__label .toggle__text:before {
+    width: .5em;
+    height: .25em;
+    border-left-width: var(--uiToggleArrowWidth);
+    border-bottom-width: var(--uiToggleArrowWidth);
+    will-change: width, height;
+    transition: width .1s ease-out .2s, height .2s ease-out
+}
+
+.toggle__label:after,
+.toggle__label:before {
+    border-radius: 4px
+}
+
+.toggle__input:not(:disabled)~.toggle__label:after,
+.toggle__input:not(:disabled)~.toggle__label:before {
+    opacity: 1;
+    transform-origin: center center;
+    will-change: transform;
+    transition: transform .2s ease-out
+}
+
+.toggle__input:not(:disabled)~.toggle__label:before {
+    transform: rotateY(0);
+    transition-delay: .2s
+}
+
+.toggle__input:not(:disabled)~.toggle__label:after {
+    transform: rotateY(90deg)
+}
+
+.toggle__input:not(:disabled):checked~.toggle__label:before {
+    transform: rotateY(-90deg);
+    transition-delay: 0s
+}
+
+.toggle__input:not(:disabled):checked~.toggle__label:after {
+    transform: rotateY(0);
+    transition-delay: .2s
+}
+
+.toggle__text:before {
+    opacity: 0
+}
+
+.toggle__input:not(:disabled):checked~.toggle__label .toggle__text:before {
+    opacity: 1;
+    transition: opacity .1s ease-out .3s, width .1s ease-out .5s, height .2s ease-out .3s
+}
 
 .toggle {
-  --toggleColor: #bd2629;
-  --toggleBgColor: #000;
-  --toggleSize: 22px;
+    --toggleColor: #bd2629;
+    --toggleBgColor: #000;
+    --toggleSize: 22px
 }
